controllers-films-users версия 0.5 с исправлениями.