@@ -9,9 +9,8 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
-import ru.yandex.practicum.filmorate.exception.ValidationException;
-import ru.yandex.practicum.filmorate.model.User;
 
+import ru.yandex.practicum.filmorate.model.User;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -39,20 +38,8 @@ public class UserController {
     public ResponseEntity<User> create(@Valid @RequestBody User user) {
         log.info("POST / user / {}", user.getLogin());
 
-        if (user.getLogin() == null || user.getLogin().isBlank()) {
-            throw new ValidationException("Логин не может быть пустым");
-        }
-
-        if (user.getEmail() == null || !user.getEmail().contains("@")) {
-            throw new ValidationException("Неверный формат email");
-        }
-
-        if (user.getBirthday() == null) {
-            throw new ValidationException("Дата рождения обязательна");
-        }
-
         user.setId(getNextId());
-        if (user.getName() == null || user.getName().isBlank()) {
+        if (StringUtils.isBlank(user.getName())) {
             user.setName(user.getLogin());
         }
         users.put(user.getId(), user);
@@ -64,17 +51,9 @@ public class UserController {
     public ResponseEntity<User> update(@Valid @RequestBody User user) {
         log.info("PUT / user / {}", user.getLogin());
 
-        if (user.getId() == null) {
-            throw new ValidationException("ID пользователя обязателен");
-        }
-
         User existingUser = users.get(user.getId());
         if (existingUser == null) {
             throw new NotFoundException("Пользователь не найден");
-        }
-
-        if (user.getEmail() != null && !user.getEmail().contains("@")) {
-            throw new ValidationException("Неверный формат email");
         }
 
         existingUser.setEmail(user.getEmail());
